changed component height to fix issue with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   color: red;
   border: solid black 1px;
   background-color: black;
-	position: absolute;
+  position: absolute;
 	width: 100%;
 	height: 10vh;
 	bottom: 0;
@@ -39,6 +39,11 @@
 }
  
 #welcome-message {
+  background-color: black;
+  margin: 20px 30px 10px;
+  padding: 5px;
+  border: 1px red solid;
+  border-radius: 30px;
   color: red;
 }
 
@@ -204,7 +209,7 @@ margin: 20px;
   border: black solid 1px;
   border-radius: 10px;
   background-color: rgba(8, 22, 155, 0.753);
-  height: 71vh;
+  height: 79vh;
   width: 100vw;
   overflow: scroll;
 }
